working on bookmark button

--- a/index.html
+++ b/index.html
@@ -52,20 +52,18 @@
             <section class="intro">
                <img src="./images/logo-mastercraft.svg" alt="mastercraft" class="mastercraft_logo" />
                <h1 class="intro_title">Mastercraft Bamboo Monitor Riser</h1>
-               <p class="description">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+               <p class="intro_description">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
                <div class="back_bookmark_btn_container">
-                  <button class="btn back" aria-label="open modal">Back this project</button>
-                  <button class="btn bookmark" aria-label="bookmark project">
-                     <svg width="56" height="56" xmlns="http://www.w3.org/2000/svg">
+                  <button class="btn back_btn" aria-label="open modal">Back this project</button>
+
+                  <button class="btn bookmark_btn bookmark_slide" aria-label="bookmark project">
+                     <svg class="circle bookmark_slide" width="56" height="56" xmlns="http://www.w3.org/2000/svg">
                         <g fill="none" fill-rule="evenodd">
-                           <circle fill="#2F2F2F" cx="28" cy="28" r="28" />
-                           <path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
+                           <circle class="circle_color bookmark_slide" fill="#2F2F2F" cx="28" cy="28" r="28" />
+                           <path class="bookmark_slide" fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
                         </g>
                      </svg>
-                     <span class="bookmark_text"
-                        >Bookmark
-                        <span class="active">ed</span>
-                     </span>
+                     <span class="bookmark_text bookmark_slide">Bookmark<span class="ed bookmark_slide">ed</span></span>
                   </button>
                </div>
             </section>
