bookmark button finish

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                            <path class="bookmark_slide" fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
                         </g>
                      </svg>
-                     <span class="bookmark_text bookmark_slide">Bookmark<span class="ed bookmark_slide">ed</span></span>
+                     <span class="bookmark_text">Bookmark<span class="ed">ed</span></span>
                   </button>
                </div>
             </section>
