statistics section added

--- a/index.html
+++ b/index.html
@@ -69,19 +69,21 @@
             </section>
 
             <div class="statistics_container">
-               <div class="stats">
-                  <p class="total_backed">$89,914</p>
-                  <p class="stat_details">of $100,000 backed</p>
-               </div>
+               <div class="statistics_group">
+                  <div class="stats">
+                     <p class="total total_backed">$89,914</p>
+                     <p class="stat_details">of $100,000 backed</p>
+                  </div>
 
-               <div class="stats">
-                  <p class="total_backers">5,007</p>
-                  <p class="stat_details">total backers</p>
-               </div>
+                  <div class="stats">
+                     <p class="total total_backers">5,007</p>
+                     <p class="stat_details">total backers</p>
+                  </div>
 
-               <div class="stats">
-                  <p class="days_left">56</p>
-                  <p class="stat_details">days left</p>
+                  <div class="stats">
+                     <p class="total days_left">56</p>
+                     <p class="stat_details">days left</p>
+                  </div>
                </div>
 
                <div class="statistics_bar">
