--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             </div>
 
             <!-- all about modal start here -->
+            <div class="modal_main_container">
             <div class="modal_container">
                <div class="modal_header">
                   <h2 class="modal_head">
@@ -366,6 +367,29 @@
                            </div>
                         </form>
                      </div>
+                  </div>
+               </div>
+            </div>
+
+            <!-- success modal -->
+            <div class="success_modal_main_container">
+               
+            </div>
+            <div class="success_modal_container">
+               <div class="success_modal">
+                  <div class="check_container">
+                     <img src="./images/icon-check.svg" alt="check" />
+                  </div>
+
+                  <div class="success_modal_description">
+                     <h2 class="success_modal_title">Thanks for your support!</h2>
+                     <p class="success_modal_text">
+                        Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get an email once our campaign is completed.
+                     </p>
+                  </div>
+
+                  <div class="got_it_btn_container">
+                     <button type="submit" id="submit_got_it" class="select_reward_btn got_it_btn">Got it!</button>
                   </div>
                </div>
             </div>
