--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
                               <p class="enter_pledge_text">Enter your pledge</p>
 
                               <div class="pledge_form_input mahogany_form_input">
-                                 <label for="amount_black_id" class="amount_label amount_mahogany">
+                                 <label for="amount_mahogany_id" class="amount_label amount_mahogany">
                                     <span class="currecy_symbol">$</span>
 
-                                    <input type="number" id="amount_black_id" name="amount_black_inputname" class="amount_input" min="1" value="75" required />
+                                    <input type="number" id="amount_mahogany_id" name="amount_black_inputname" class="amount_input" min="1" value="75" required />
                                  </label>
 
                                  <div class="continue_btn_container">
