--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <title>Frontend Mentor | Crowdfunding product page</title>
    </head>
-   <body>
+   <body class="bodyStopScrolling">
       <div class="container">
          <div class="overlay"></div>
 
@@ -391,7 +391,7 @@
                      </div>
 
                      <div class="got_it_btn_container">
-                        <button type="submit" id="submit_got_it" class="select_reward_btn got_it_btn">Got it!</button>
+                        <button type="submit" id="submit_got_it" class="got_it_btn">Got it!</button>
                      </div>
                   </div>
                </div>
