--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <title>Frontend Mentor | Crowdfunding product page</title>
    </head>
-   <body class="bodyStopScrolling">
+   <body id="bodyStopScrolling">
       <div class="container">
          <div class="overlay"></div>
 
@@ -404,6 +404,16 @@
                <div>
                   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noreferrer noopener">Frontend Mentor</a>. Coded by
                   <a href="https://github.com/boymelvs" target="_blank" rel="noreferrer noopener">boymelvs</a>.
+               </div>
+
+               <div class="scroll_up">
+                  <a href="#bodyStopScrolling">
+                     <div class="arrowUp">
+                        <div class="arrow_head"></div>
+                        <div class="arrow_base"></div>
+                        <div class="up">UP</div>
+                     </div>
+                  </a>
                </div>
             </div>
          </footer>
