--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <!-- /* navigation menu here */ -->
             <nav class="nav_list">
                <ul>
-                  <li><a href="/" class="about">About</a></li>
-                  <li><a href="/" class="discover">Discover</a></li>
-                  <li><a href="/" class="get_started">Get Started</a></li>
+                  <li><a href="#" class="about">About</a></li>
+                  <li><a href="#" class="discover">Discover</a></li>
+                  <li><a href="#" class="get_started">Get Started</a></li>
                   <li class="pointer"></li>
                </ul>
             </nav>
